%% FamilyPassportMap — Master Entity-Relationship Diagram
%% This is the single source of truth for the database schema. It must always match
%% apps/server/prisma/schema.prisma exactly — see CLAUDE.md's "Diagram Sync Requirements".
%% Implemented as of Phase 8 (migrations 20260812220505_add_person_and_visited_state,
%% 20260916173026_add_visited_country).

erDiagram
    PERSON ||--o{ VISITED_STATE : "visits"
    PERSON ||--o{ VISITED_COUNTRY : "visits"

    PERSON {
        string id PK "cuid"
        string name
        string colorHex "validated hex color"
        string profilePicturePath "nullable, DATA_DIR/uploads/..."
        datetime createdAt
    }

    VISITED_STATE {
        string id PK "cuid"
        string personId FK "-> Person.id, onDelete Cascade"
        string stateCode "2-letter USPS code, e.g. CA"
        datetime visitedAt
    }

    VISITED_COUNTRY {
        string id PK "cuid"
        string personId FK "-> Person.id, onDelete Cascade"
        string countryCode "ISO 3166-1 alpha-2, e.g. FR"
        datetime visitedAt
    }

    %% Unique constraints: VISITED_STATE (personId, stateCode) and
    %% VISITED_COUNTRY (personId, countryCode) — a person can only have one row per
    %% state, and one row per country.
    %% Deleting a Person cascade-deletes both their VisitedState and VisitedCountry rows.
    %% VISITED_STATE and VISITED_COUNTRY are fully independent — no relation between them,
    %% and marking the US as a visited country has no link to any visited states.
